--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 <p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, J.Xu, C.Lin. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  P.Garraghan, R.Yang*, Z.Wen, A.Romanovsky, J.Xu, R.Buyya, R.Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale, IEEE Cloud Computing, 2018  </span></p>
