--- a/publications_topics.html
+++ b/publications_topics.html
@@ -122,7 +122,7 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Dependability: Reliability and Fault Tolerance </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, J.Xu, C.Lin. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing(TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016.pdf">[paper]</a> 
