--- a/publications.html
+++ b/publications.html
@@ -85,15 +85,23 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2019 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
-IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
+IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019 
+<a href="paper/tpds2019-gapar.pdf">[paper]</a>
+</span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-Location System. in the 13th IEEE SOSE, 2019 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-Location System. in the 13th IEEE SOSE, 2019 
+<a href="paper/sose2019-shaready.pdf">[paper]</a>
+</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Liu, R.Yang*, J.Sun, X.Liu.
-SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in the 13th IEEE SOSE, 2019 </span></p>
+SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in the 13th IEEE SOSE, 2019 
+<a href="paper/sose2019-sysoptic.pdf">[paper]</a>
+</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Townend, S.J.Clement, D.Burdett, R.Yang, J.Shaw, B.Slater, J.Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Townend, S.J.Clement, D.Burdett, R.Yang, J.Shaw, B.Slater, J.Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 
+<a href="paper/sose2019-k8s.pdf">[paper]</a>
+</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Zhao, J. Ouyang, J.Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
 
