--- a/publications_topics.html
+++ b/publications_topics.html
@@ -114,16 +114,17 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; W.Wang, C.Hu, T.Wo and R.Yang*. YarnPlus: A Yarn Based Framework for Fine-Grained Resource Sharing in Heterogeneous Computing Environments, in the 11th CCF CNCC 2013, <a href="paper/cncc2013.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-Location System. in the 13th IEEE SOSE, 2019 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-Location System. in the 13th IEEE SOSE, 2019 
+<a href="paper/sose2019-shaready.pdf">[paper]</a> </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Townend, S.J.Clement, D.Burdett, R.Yang*, J.Shaw, B.Slater, J.Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Townend, S.J.Clement, D.Burdett, R.Yang*, J.Shaw, B.Slater, J.Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 <a href="paper/sose2019-k8s.pdf">[paper]</a> </span></p>
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Dependability: Reliability and Fault Tolerance </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
-IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
+IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  <a href="paper/tpds2019-gapar.pdf">[paper]</a></span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing(TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016.pdf">[paper]</a> 
 </span></p>
@@ -185,7 +186,9 @@ A Method for Private Car Transportation Dispatching Based on a Passenger Demand 
 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Liu, R.Yang*, J.Sun, X.Liu.
-SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in the 13th IEEE SOSE, 2019 </span></p>
+SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in the 13th IEEE SOSE, 2019 
+<a href="paper/sose2019-sysoptic.pdf">[paper]</a>
+</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Y.Huang, R.Yang, L.Cui, T.Wo, C.Hu, B.Li. VMCSnap: Taking Snapshots of Virtual Machine Cluster with Memory Deduplication. in the 8th IEEE SOSE 2014<a href="paper/ivce2014.pdf">[paper]</a>
 </span></p>
