--- a/index.html
+++ b/index.html
@@ -185,28 +185,34 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 <p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
+~$ Highlight: TPDS(1), VLDB(1), ICDCS(1), TSC(2), DSN(1), LISA(1) </span></p>
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
+
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  P.Garraghan, X.Ouyang, R.Yang*, D.Mckee and J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters. IEEE Trans. on Services Computing (TSC), 2019   </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover. IEEE Trans. on Services Computing (TSC), 2017</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services. IEEE Internet Computing, 2017  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  P.Garraghan, R.Yang*, Z.Wen, A.Romanovsky, J.Xu, R.Buyya, R.Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale, IEEE Cloud Computing, 2018  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  ROSE: Cluster Resource Scheduling via Speculative Over-subscription, IEEE ICDCS 2018  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang, X.Ouyang, Y.Chen, P.Townend, J.Xu. Intelligent Resource Scheduling: a Machine Learning Perspective, IEEE SOSE 2018  </span></p>
-
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP 2017 (poster)  </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services. IEEE Internet Computing, 2017  </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  P.Garraghan, X.Ouyang, R.Yang*, D.Mckee and J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters. IEEE Trans. on Services Computing, 2019   </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover. IEEE Trans. on Services Computing, 2017</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  X.Ouyang, P.Garraghan, R.Yang, P.Townend and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, IEEE DSN 2016 (short paper)</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang and J.Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale. VLDB 2014</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  L.Cui, J.Li, T. Wo, B.Li, R.Yang, Y.Cao, and J.Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, USENIX LISA 2014 </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  X.Ouyang, P.Garraghan, R.Yang, P.Townend and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, IEEE DSN 2016 </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang, X.Ouyang, Y.Chen, P.Townend, J.Xu. Intelligent Resource Scheduling: a Machine Learning Perspective, IEEE SOSE 2018  </span></p>
+
+
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ Recent publications could be also found here:
 <a href="publications.html">[Complete List] </a> 
@@ -236,6 +242,11 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advising in MSDS Research Team </span></p>
+
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
+~$ I have been supervising and working closely with many students mainly from Beihang University and University of Leeds team. The programmes include phD/MSc research projects and MSc projects in the module COMP5200M and COMP3211. </span></p>
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> Current </strong> </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Postdoc researchers: Dr. Qi Shen (2017.9- ) </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  PhD. students: Jianyong Zhu (2017.5- , Beihang Uni.), Xiaoyang Sun (2019.9- , Uni of Leeds), 
