--- a/services.html
+++ b/services.html
@@ -85,16 +85,21 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE ESaaSA 2014 (in conjuction with IEEE CLOSER 2014)</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE IWES 2014 (in conjuction with IEEE CloudCom 2014) </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE FiCloud 2016 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE/ACM BDCAT 2016, 2017, 2018, 2019  (The IEEE/ACM International Conference on Big Data Computing, Applications and Technologies)</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE/ACM BDCAT 2016, 2017, 2018, 2019  </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE/ACM UCC 2019 </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE International Conference on Joint Cloud Computing (JCC), 2020 </span></p>
+
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Conferences Organizer: </strong></span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Organizer: IEEE ISORC'2012, IEEE iVCE'2012, CoLaB Workshop'2012,CoLaB Workshop'2013, CoLaB Workshop'2014</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; <strong> Reviewer </strong> of</span> :</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; <strong> Reviewer: </strong> </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE iVCE, IEEE CCDC, IEEE CSC etc.; </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE J/Transactions:  IEEE Trans. on Computer(TC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. Dependable and Secure Computing (TDSC); IEEE Trans. Services Computing (TSC); IEEE Trans. on Cloud Computing (TCC);  IEEE Trans. on Sustainable Computing; IEEE IoT Journal, IEEE Computer, etc.
 </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Other Journals like Journal of Parallel and Distributed Computing (JPDC); Future Generation Computing Systems (FGCS); ACM Computing Survey; Journal of Computer Science and Technology (JCST); Open Journal of Cloud Computing (OJCC);  Journal of Cloud Computing;  Journal of Information Science and Engineering, International Journal of Engineering Intelligent System;  etc. </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Other Journals like Journal of Parallel and Distributed Computing (JPDC); Future Generation Computing Systems (FGCS); ACM Computing Survey (CSUR); Journal of Computer Science and Technology (JCST);  Journal of Cloud Computing, etc. </span></p>
 
 
  
