--- a/publications.html
+++ b/publications.html
@@ -82,12 +82,20 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <span class="incline"> * = the correspondence author of papers with my supervised students or team members. '= equal contribution </span> &nbsp; &nbsp;</p>
 
 
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">In Preparation </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, J.Xu. Cluster Scheduling Using Speculative Oversubscription to Achieve High Resource Utilization. IEEE Transactions on Parallel and Distributed Systems(TPDS), 2019 (Major Revision) </span></p> 
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. submitted to ACM Computing Surveys (ACM CSUR), 2019 (Under Review)
+
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2019 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019 
 <a href="paper/tpds2019-gapar.pdf">[paper]</a>
 </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; J.Zhu', R.Yang', C.Hu, T.Wo, J.Ouyang and J.Xu. Perph: a ML-based Agent for Workload Co-location via Online Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), poster, 2019 </span></p>
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-Location System. in the 13th IEEE SOSE, 2019 
