--- a/presentations.html
+++ b/presentations.html
@@ -75,13 +75,13 @@
 <title>Renyu YANG's Homepage</title>
 <body>
 
-<p><span class="style10">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;Presentations &nbsp;&nbsp;&nbsp; <a href="./presentations.html">[home]</a> 
+<p><span class="style10">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;Presentations &nbsp;&nbsp;&nbsp; <a href="./index.html">[home]</a> 
 </span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Cluster Resource Scheduling - Academic and Industrial Experience. Invited Talk, 13th Feb., 2019, Newcastle University upon Tyne, Newcastle, UK </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Resource Scheduling - Dependability and Machine Learning Perspective. Invited Talk, 10th Oct., 2018, Huawei R&D, Cambridge, UK  </span> &nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Resource Scheduling - Dependability and Machine Learning Perspective. Invited Talk, 10th Oct., 2018, Industrial Theme, Cambridge, UK  </span> &nbsp;</p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Kubernetes Scheduler R&D - Early Experience and Lessons Learnt from Practice. School Seminar, 10th Sep., 2018, SoC, Leeds, UK  </span> &nbsp;</p>
 
