--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@ Previously, I led several China national or international projects in terms of d
 2) dependable service provisioning by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
 3) improved system utility for resource management through resource over-subscription mechanism and multi-objective optimization, etc.; 
 and 4) geo-distributed data processing, etc. 
-I has published more than 30 peer-reviewed papers in the field of distributed systems and cloud computing. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems, IEEE Transactions on Services Computing, IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, ACM SOSP(poster), USENIX LISA, IEEE HASE, etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
+I has published more than 30 peer-reviewed papers in the field of distributed systems and cloud computing. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems, IEEE Transactions on Services Computing, IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, ACM SOSP(poster), USENIX LISA, ACM SoCC, etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University </a>, China  in June 2011 and January 2017 respectively.  I had been working both in the Networked Computing Group (NCG) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with the UK Computer Science community (such as University of Leeds, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I was the founder and team lead of SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China  in June 2011 and January 2017 respectively.  I had been working both in the Networked Computing Group (NCG) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with the UK Computer Science community (such as Uni of Edinburgh, Lancaster Uni, Newcastle Uni upon Tyne, etc.). I was the founder and team lead of SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
 </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests </span></p>
@@ -163,16 +163,17 @@ I has published more than 30 peer-reviewed papers in the field of distributed sy
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Education </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2007.9-2011.6: &nbsp;&nbsp; B.Sc. (Supervised by Dr. Tianyu Wo), Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2007.9-2011.6: &nbsp;&nbsp; B.Sc. Computer Science (equivalent to 1st Class Honours), supervised by Dr. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2011.9-2017.1: &nbsp;&nbsp; Ph.D. (Supervised by Prof. Jie Xu), Beihang University, China 
-&nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2011.9-2017.1: &nbsp;&nbsp; Ph.D. Computer Science (with Honor), Supervised by Prof. Jie Xu, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2012.10-2013.1, 2013.12 and 2016.3: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2012.10-2013.1, 2013.12 and 2016.3: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend</a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Academia & Industry Experience  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2014.2-2016.2: &nbsp;&nbsp; Co-op/ R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433"> Zhuo Zhang </a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b"> Chao Li </a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2010.4-2017.2: &nbsp; Teaching and Research Assistant, Team Leader, SIGRS and MSDS, Beihang University, Beijing, China &nbsp;&nbsp; </span></p> 
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2014.2-2016.2: &nbsp;&nbsp; Co-op/ R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433">Zhuo Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b">Chao Li</a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2016.4-2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
@@ -215,9 +216,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ Recent publications could be also found here:
-<a href="publications.html">[Complete List] </a> 
+<a href="publications.html">[Complete List]</a> 
 <a href="http://www.informatik.uni-trier.de/~ley/pers/hd/y/Yang:Renyu">[My DBLP]</a>
-<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en"> [Googe Scholar] </a>
+<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en">[Googe Scholar]</a>
 </span></p> 
 
 
@@ -247,37 +248,41 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
 ~$ I have been supervising and working closely with many students mainly from COLAB. The programmes primarily include phD/MSc research projects and MSc projects in the module COMP5200M and COMP3211. </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> Current </strong> </span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Postdoc researchers: Dr. Qi Shen (2017.9- ) </span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  PhD. students: Jianyong Zhu (2017.5- , Beihang Uni.), Xiaoyang Sun (2019.9- , Uni of Leeds), 
-Jaber Almutairi (2018.6-, Uni of Leeds) </span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  MSc. students: Shiqing Xue (2018.9-, Beihang Uni.) and Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (2019.4- Uni. of Leeds) </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> Current </strong> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  PhD. students: Jianyong Zhu (2017.5- , Beihang Uni.), Xiaoyang Sun (2019.9- , Uni of Leeds), Jaber Almutairi (2018.6-, Uni of Leeds), Xiaochen Sun (2019.9- , Uni of Leeds., Visiting Student from ISCAS) </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  MSc. students: Shiqing Xue (2018.9-, Beihang Uni.) </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> Alumni </strong> </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> Alumni </strong> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Dr. Qi Shen (2017.9-2019, Postdoc researchers) 
+</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (M.Sc, 2019.4-2019.9, Uni. of Leeds) </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Junqing Xiao (M.Sc, 2016.9-2018.12, first employment at Alibaba Group)</span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Ximing Qu (M.Sc, 2016.9-2018.12, first employment at Alibaba Group) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Xiaoyang Sun (M.Sc, 2015.9-2018.3, PhD student at Uni. of Leeds. UK) </span></p> 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Lian Du (M.Sc, 2015.9-2018.3, first employment at Alibaba Cloud Inc.) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Lian Du (M.Sc, 2015.9-2018.3, first employment at Alibaba Group) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Xixu Wang (M.Sc, 2014.9-2017.3, first employment at Baidu Inc.) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Michael Hao Tong (B.Sc, 2012.9-2014.6, PhD student at Uni. of Chicago, US) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Yuda Wang (M.Sc, 2012.9-2015.3, first employment at China Telecom.) </span></p> 
 
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Teaching </span></p>
+ 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull; Cloud Computing (CS61839, Graduate Level Course, Beihang University), Spring 2017 (Together with Prof. Chunming Hu et. al)</span></p> 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some talks including the technical reports in the industrial meetings or academic presentations I gave could be found here: <a href="presentations.html"> talks </a> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some talks including the technical reports in the industrial meetings or academic presentations I gave could be found here: <a href="presentations.html">talks</a> </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Services </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some of my recent services could be found here: <a href="services.html"> services </a> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some of my recent services could be found here: <a href="services.html">services</a> </span></p>
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (中国电子学会科技进步特等奖) </p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong> Outstanding Graduate Award </strong> of Beijing Graduates </p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>Guanghua Scholarship Award </strong> for outstanding students 2013 </p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>&#8220;Best Paper Award&#8221;</strong> of the IEEE 11th International Symposium on Autonomous Decentralized System(ISADS 2013)</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong> Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>Guanghua Scholarship Award </strong> for outstanding students, 2014 </p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>&#8220;Best Paper Award&#8221;</strong> of the IEEE 11th International Symposium on Autonomous Decentralized System(ISADS), 2013 </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;  <strong>&#8220;Excellent Academic Award&#8221;</strong> of The Institute of Advanced Computing Technology, Beihang University
-</span></p>
+</span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong> &#8220;Excellent Scientific Practice Award&#8221;</strong> of The Institute of Advanced Computing Technology, Beihang University</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   the 20th <strong>&quot;FengRu Cup&quot;</strong> Innovation Competition of Beihang University, Second Price</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   Excellence Student Scholarship of Beihang University</span></p>
@@ -293,7 +298,7 @@ Jaber Almutairi (2018.6-, Uni of Leeds) </span>&nbsp;&nbsp;</p>
 &nbsp; &nbsp; 
 <a href="http://act.buaa.edu.cn/cuilei" target="_blank">Dr. Lei Cui</a> &nbsp;&nbsp;
 &nbsp; &nbsp; 
-<a href="http://www.tlin.me/" target="_blank"> Mr. Tao Lin</a> &nbsp;&nbsp;
+<a href="https://tlin-tao-lin.github.io/" target="_blank"> Mr. Tao Lin</a> &nbsp;&nbsp;
 </span></p>
 
 
@@ -314,9 +319,13 @@ Jaber Almutairi (2018.6-, Uni of Leeds) </span>&nbsp;&nbsp;</p>
 </span></p>
 
 
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Misc </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  I really enjoy traditional chinese calligraphy, cooking world wide foods, music, running and hiking in my life. 
+</span></p>
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Jan., 2019 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Sep. 2019 </span></p>
 
 </body>
 </html>
