--- a/services.html
+++ b/services.html
@@ -72,8 +72,7 @@
 
 <title> Renyu YANG's Services </title>
 <body>
-<p><span class="Bolder">Services</span></p>
-
+<p><span class="Bolder">Services <a href="./index.html">[home]</a></span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Gerneral and PC Co-Chair:</strong></span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE JCC 2019 (in conjuction with IEEE SOSE 2019)</span></p>
 
