--- a/publications.html
+++ b/publications.html
@@ -95,10 +95,10 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <a href="paper/tpds2019-gapar.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; J.Zhu', R.Yang', C.Hu, T.Wo, J.Ouyang and J.Xu. Perph: a ML-based Agent for Workload Co-location via Online Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), poster, 2019 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perphon: a ML-based Agent for Workload Co-location via Online Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), poster, 2019 </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-Location System. in the 13th IEEE SOSE, 2019 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-location System. in the 13th IEEE SOSE, 2019 
 <a href="paper/sose2019-shaready.pdf">[paper]</a>
 </span></p>
 
