--- a/publications_topics.html
+++ b/publications_topics.html
@@ -79,7 +79,7 @@
 	<a href="./publications.html">[years] </a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> * = the correspondence author of papers with my supervised students or team members </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> * = the correspondence author of papers with my supervised students or team members.  '= equal contribution  </span> &nbsp; &nbsp;</p>
 
 
 
@@ -90,6 +90,8 @@
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li. ROSE: Cluster Resource Scheduling via Speculative Over-subscription. in the 38th IEEE ICDCS 2018 <a href="paper/icdcs2018.pdf">[paper]</a>
 </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perphon: a ML-based Agent for Workload Co-location via Online Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), poster, 2019 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP, 2017 (poster) <a href="paper/sosp2017-poster.pdf">[paper]</a>
 </span></p>
@@ -114,7 +116,7 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; W.Wang, C.Hu, T.Wo and R.Yang*. YarnPlus: A Yarn Based Framework for Fine-Grained Resource Sharing in Heterogeneous Computing Environments, in the 11th CCF CNCC 2013, <a href="paper/cncc2013.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-Location System. in the 13th IEEE SOSE, 2019 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-location System. in the 13th IEEE SOSE, 2019 
 <a href="paper/sose2019-shaready.pdf">[paper]</a> </span></p>
 
 
