--- a/index.html
+++ b/index.html
@@ -113,9 +113,6 @@
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
 &nbsp;
 
-<a href="http://weibo.com/buaayangry" target="_blank">
-    <img src="icons/weibo.jpg" width="30" height="30" alt="Weibo" border="0" title="Weibo"/></a>
-
 <a href="http://www.facebook.com/yang.renyu" target="_blank">
     <img src="icons/facebook.jpg" width="45" height="30" alt="Facebook" border="0" title="Facebook"/></a>
 
@@ -320,7 +317,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Misc </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  I really enjoy traditional chinese calligraphy, cooking world wide foods, music, running and hiking in my life. 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Outside of work, I really enjoy traditional chinese calligraphy, architectural design, cooking world wide foods, music and long-distance running.
 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
