--- a/presentations.html
+++ b/presentations.html
@@ -91,7 +91,13 @@
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Computing at Scale: Data-driven Approaches. Invited Talk, 1st December, 2017, Edgetic, UK </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Computing at Scale: System Evolution Perspective. Invited Talk, 11th December, 2016, ChinaCloud, Changsha, China </span> &nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Big Data and High Performance Computing for Business Analytics. Seminar, May, 2017, KPMG China, Beijing, China </span> &nbsp;</p> 
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Resource Management for AI and IoV systems. Invited Talk, 1st February, 2017, Baidu, Beijing, China </span> &nbsp;</p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Computing at Scale: System Evolution Perspective. Invited Talk, 11th December, 2016, ChinaCloud and NUDT, Changsha, China </span> &nbsp;</p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Modern Fault-Tolerant Resource Management. Invited Talk, 9th December, 2016, Amazon, Beijing, China </span> &nbsp;</p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Distributed Scheduler Scalability and Parallelism. Tutorials, 17th Semptember,2015, Alibaba Group, Beijing, China </span> &nbsp;</p>
 
@@ -100,6 +106,8 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Improving Utilization through Dynamic VM Resource Allocation in Hybrid Cloud Environment. <a href="talks/20141217_ICPADS.pdf"> [slides] </a>  IEEE ICPADS 2014, 17th December, 2014, Hsinchu, Taiwan </span> &nbsp;</p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Introduction to R and Big Data Analysis for System Profiling <a href=""> [slides] </a>  Technical Seminar, 30th October, 2014, Alibaba Cloud Computing Inc., Beijing, China </span> &nbsp;</p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull;  Cluster Tracelog Analysis and Implications. Invited Talk, August, 2014, MSRA, Beijing, China </span> &nbsp;</p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Computing at Scale: System Architectural Evolution and Introduction to Fuxi <a href="talks/20140819_Tsinghua.pdf">[slides]</a>   Invited Talk, 19th August, 2014, Department of Computing, Tsinghua University, Beijing, China </span> &nbsp;</p>
 
