--- a/publications.html
+++ b/publications.html
@@ -84,11 +84,9 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">WIP and Preprint </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, J.Xu. Cluster Scheduling Using Speculative Oversubscription to Achieve High Resource Utilization. IEEE Transactions on Parallel and Distributed Systems(TPDS), 2019 (Major Revision) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, J.Xu. Performance-aware Speculative Resource Oversubscription for Large-scale Clusters. IEEE Transactions on Parallel and Distributed Systems(TPDS), 2019 (Major Revision) </span></p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perph: A Workload Co-location Agent with Online
-Performance Prediction and Resource Inference. submitted to 34th IEEE International Parallel &
-Distributed Processing Symposium (IPDPS 2020) </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. submitted to 34th IEEE International Parallel and Distributed Processing Symposium (IPDPS 2020) </span></p>
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. submitted to ACM Computing Surveys (ACM CSUR), 2019 (Under Review)
@@ -100,7 +98,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <a href="paper/tpds2019-gapar.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), poster, 2019 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), 2019  
+<a href="paper/socc2019-perphon.pdf"> [paper]</a>
+</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. CoRR abs/1910.05433, 2019  
 <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a> </span></p>
