--- a/news.html
+++ b/news.html
@@ -84,9 +84,9 @@
 
 <span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (09/09/2013) Our paper was accepted by IEEE CloudCom 2013</span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (16/11/2013) I gave presentation at IEEE HPCC 2013 </span></p>
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (16/11/2013) a presentation was given at IEEE HPCC 2013 </span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (03/12/2013) I gave presentation at IEEE CloudCom 2013 </span></p>
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (03/12/2013) a presentation was given  at IEEE CloudCom 2013 </span></p>
 
 <span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (23/10/2013) Guanghua Scholarship for exellent student is awarded </span></span></p>
 
@@ -98,9 +98,9 @@
 
 <span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/09/2014) Our papers are accepted by IEEE ICPADS 2014 </span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/09/2014) I attended VLDB 2014 </span></p>
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/09/2014) a presentation was given at VLDB 2014 </span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (17/12/2014) I gave presentation at IEEE ICPADS 2014 </span></p>
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (17/12/2014) a presentation was given at IEEE ICPADS 2014 </span></p>
 
 <span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (20/06/2015) Our recent works on reliable task execution and resource management by leveraging cost-effective component failovers has been submitted to IEEE Transactions on Servie Computing and under review now. </span></p>
 
@@ -116,11 +116,11 @@
 
 <p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (04/03/2016) Our paper <a href="paper/tsc2016.pdf">"Reliable Computing Service in Massive-scale Systems Through Rapid Low-cost Failover"</a> is accepted by IEEE Transactions on Services Computing(TSC). Big congrats! </span></p>
 
-<p><span class="style11">  &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/03/2016) I attend IEEE SOSE 2016 at Oxford, UK. In April I will visit University of Oxford, University of Leeds and University of Edinburgh, working with my collaborators on our recent joint projects and papers. </span></p>
+<p><span class="style11">  &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/03/2016) I attend IEEE SOSE 2016 at Oxford, UK. In April I visited University of Oxford, University of Leeds and University of Edinburgh, working with my collaborators on our recent joint projects and papers. </span></p>
 
 <p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/03/2016) PC Member of IEEE FiCloud 2016 and IEEE/ACM BDCAT 2016</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (20/04/2016) Our fast-abstract paper "Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters" is accepted by IEEE DSN 2016.  </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (20/04/2016) Our paper "Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters" is accepted by IEEE DSN 2016.  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/09/2016) Our <a href="paper/icpads2016.pdf">paper</a> that focuses on RDF data management is accepted by IEEE ICPADS 2016.  </span></p>
  
@@ -151,8 +151,7 @@
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/10/2018) The chapter entitled "Fog Orchestration and Simulation for IoT Services" is accepted to publish in the book of "Fog and Fogonomics: Challenges and Practices of Fog Computing, Networking, Strategy, and Economics"  by Wiley . </span></p>
 
-
-<p><span class="red">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (02/2019) Edgetic datacentre management solution and preliminary case study <a href="https://www.edgetic.com" >link</a> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (02/2019) Edgetic datacentre management solution and preliminary case study <a href="https://www.edgetic.com" >link</a> </span></p>
 
 
 
