--- a/services.html
+++ b/services.html
@@ -73,10 +73,9 @@
 <title> Renyu YANG's Services </title>
 <body>
 <p><span class="Bolder">Services <a href="./index.html">[home]</a></span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Gerneral and PC Co-Chair:</strong></span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> (Co-) Chair:</strong></span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE International Conference on Joint Cloud Computing (JCC), 2020 </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE JCC 2019 (in conjuction with IEEE SOSE 2019)</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Publicity Chair: </strong> </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> PC Member:</strong></span></p>
@@ -84,19 +83,17 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE ESaaSA 2014 (in conjuction with IEEE CLOSER 2014)</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE IWES 2014 (in conjuction with IEEE CloudCom 2014) </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE FiCloud 2016 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE/ACM BDCAT 2016, 2017, 2018, 2019  </span></p>
-
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE/ACM BDCAT 2016-2019  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE/ACM UCC 2019 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE International Conference on Joint Cloud Computing (JCC), 2020 </span></p>
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Conferences Organizer: </strong></span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Organizer: IEEE ISORC'2012, IEEE iVCE'2012, CoLaB Workshop'2012,CoLaB Workshop'2013, CoLaB Workshop'2014</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; <strong> Reviewer: </strong> </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE iVCE, IEEE CCDC, IEEE CSC etc.; </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE J/Transactions:  IEEE Trans. on Computer(TC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. Dependable and Secure Computing (TDSC); IEEE Trans. Services Computing (TSC); IEEE Trans. on Cloud Computing (TCC);  IEEE Trans. on Sustainable Computing; IEEE IoT Journal, IEEE Computer, etc.
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS,  IEEE ISSRE, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE CCDC, etc. </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Transactions/Journals:  IEEE Trans. on Computer(TC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. on Dependable and Secure Computing (TDSC); IEEE Trans. on Services Computing (TSC); IEEE Trans. on Software Engineering(TSE); IEEE Trans. on Reliability; IEEE Trans. on Cloud Computing (TCC); IEEE Trans. on Sustainable Computing; IEEE IoT Journal, IEEE Computer, etc.
 </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Other Journals like Journal of Parallel and Distributed Computing (JPDC); Future Generation Computing Systems (FGCS); ACM Computing Survey (CSUR); Journal of Computer Science and Technology (JCST);  Journal of Cloud Computing, etc. </span></p>
 
