--- a/publications_topics.html
+++ b/publications_topics.html
@@ -83,7 +83,7 @@
 
 
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Resource Management: Scheduling and Orchestration </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Distributed System Resource Management: Scheduling and Orchestration </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang, J.Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale, in the 40th VLDB 2014, <a href="paper/vldb2014.pdf">[paper]</a>
 </span></p>
@@ -124,7 +124,7 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Townend, S.J.Clement, D.Burdett, R.Yang*, J.Shaw, B.Slater, J.Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 <a href="paper/sose2019-k8s.pdf">[paper]</a> </span></p>
 
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Dependability: Reliability and Fault Tolerance </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> System Dependability: Reliability and Fault Tolerance </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  <a href="paper/tpds2019-gapar.pdf">[paper]</a></span></p>
@@ -154,7 +154,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  <a href="paper/tpd
 
 
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Big Data Applications and ML </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Systems for Big Data and ML Applications </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. CoRR abs/1910.05433, 2019  
 <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a> 
