--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (10/10/2019) A recent survey study on the management of development lifecycle for ML-Based IoT Applications <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a>  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (15/07/2019) Our work "GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds" has been accepted to publish in 
-IEEE Trans. on Parallel and Distributed Systems (TPDS). Big Congrats! </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (15/07/2019) Our work "GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds" has been accepted to publish in IEEE Trans. on Parallel and Distributed Systems (TPDS). Big Congrats! </span></p>
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (02/2019) Edgetic datacentre management solution and preliminary case study <a href="https://www.edgetic.com" >link</a> </span></p>
@@ -159,7 +158,6 @@ I has published more than 35 peer-reviewed papers in the field of distributed sy
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;   Play with data: system profiling, log analysis, data-driven optimization </span></p>
 
 
-
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Education </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2007.9-2011.6: &nbsp;&nbsp; B.Sc. Computer Science (equivalent to 1st Class Honours), supervised by Dr. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
@@ -178,9 +176,6 @@ I has published more than 35 peer-reviewed papers in the field of distributed sy
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2017.3 - 2018.2: &nbsp;&nbsp; Research Scientist and Project Director, Big Data and Brain Computing Research Center (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
  
- 
-
-
 
 
 <p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p>
@@ -326,7 +321,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Sep. 2019 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Dec. 2019 </span></p>
 
 </body>
 </html>
