--- a/publications_topics.html
+++ b/publications_topics.html
@@ -160,7 +160,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  <a href="paper/tpd
 <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a> 
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; H.Peng, J.Li, S.Wang, L.Wang, Q.Gong, R.Yang, B.Li, L.He and P.S.Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; H.Peng, J.Li, S.Wang, L.Wang, Q.Gong, R.Yang, B.Li, L.He and P.S.Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf">[paper]</a>
 </span></p> 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Zhao, J. Ouyang, J.Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
