--- a/publications.html
+++ b/publications.html
@@ -82,11 +82,11 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <span class="incline"> * = the correspondence author of papers with my supervised students or team members. '= equal contribution </span> &nbsp; &nbsp;</p>
 
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2019 </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2019</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019 
-<a href="paper/tpds2019-gapar.pdf">[paper]</a>
+<a href="paper/tpds2019-gapar-full.pdf">[full version]</a> <a href="paper/tpds2019-gapar.pdf">[paper]</a> 
 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), 2019  
@@ -118,7 +118,10 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018 </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a>
+<a href="https://scholar.google.com/scholar?oi=bibs&cluster=10135161801314640093&btnI=1&hl=en"> [googlebook]</a> 
+<a href="">[preprint]</a>
+ </span></p>
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Garraghan, R.Yang*, Z.Wen, A.Romanovsky, J.Xu, R.Buyya,R. Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale. IEEE Cloud Computing, 2018 (SCI-IF = 2.929, Q1) <a href="paper/ieeecloud2018.pdf">[paper]</a>
