update rose paper

--- a/index.html
+++ b/index.html
@@ -126,14 +126,18 @@
 </table>
 </a> 
 
-<p class="Bolder">&nbsp;&nbsp;&nbsp;  What's new </p>
+<p class="Bolder">&nbsp;&nbsp;&nbsp;  What's New </p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (25/01/2020) Our paper 
+"Orchestrating Development Lifecycle of ML-Based IoT Applications" has been accepted to publish in ACM Computing Surveys (CSUR) 2020. 
+</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (25/01/2020) Our paper 
+"Performance-aware Speculative Resource Oversubscription for Large-scale Clusters" has been accepted to publish in IEEE Trans. on Parallel and Distributed Systems (TPDS).  
+</span></p>
+
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (10/10/2019) A recent survey study on the management of development lifecycle for ML-Based IoT Applications <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a>  </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (15/07/2019) Our work "GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds" has been accepted to publish in IEEE Trans. on Parallel and Distributed Systems (TPDS). Big Congrats! </span></p>
-
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (02/2019) Edgetic datacentre management solution and preliminary case study <a href="https://www.edgetic.com" >link</a> </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ No news is good news...Check more previous events in <a href="news.html"> old events</a>. </span></p>
 
@@ -181,7 +185,9 @@ I has published more than 35 peer-reviewed papers in the field of distributed sy
 <p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
-~$ Highlight: TPDS(1), VLDB(1), ICDCS(1), TSC(2), DSN(1), LISA(1), SoCC(1), etc. </span></p>
+~$ Highlight: TPDS(2), TKDE(1), TSC(2), VLDB(1), ICDCS(1), DSN(1), LISA(1), SoCC(1), etc. </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. Performance-aware Speculative Resource Oversubscription for Large-scale Clusters, IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
@@ -192,13 +198,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services. IEEE Internet Computing, 2017  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  P.Garraghan, R.Yang*, Z.Wen, A.Romanovsky, J.Xu, R.Buyya, R.Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale, IEEE Cloud Computing, 2018  </span></p>
-
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), 2019 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  ROSE: Cluster Resource Scheduling via Speculative Over-subscription, IEEE ICDCS 2018  </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP 2017 (poster)  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang, X.Ouyang, Y.Chen, P.Townend, J.Xu. Intelligent Resource Scheduling: a Machine Learning Perspective, IEEE SOSE 2018  </span></p>
 
@@ -208,8 +210,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  X.Ouyang, P.Garraghan, R.Yang, P.Townend and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, IEEE DSN 2016 </span></p>
 
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ Recent publications could be also found here:
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ More publications can be found in:
 <a href="publications.html">[Complete List]</a> 
 <a href="http://www.informatik.uni-trier.de/~ley/pers/hd/y/Yang:Renyu">[My DBLP]</a>
 <a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en">[Googe Scholar]</a>
