--- a/news.html
+++ b/news.html
@@ -154,14 +154,7 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (02/2019) Edgetic datacentre management solution and preliminary case study <a href="https://www.edgetic.com" >link</a> </span></p>
 
 
-
-
-
-
-
-
-
-
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (15/07/2019) Our work "GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds" has been accepted to publish in IEEE Trans. on Parallel and Distributed Systems (TPDS). </span></p>
 
 
 
