--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,7 @@
 	{font-size:24px}
 .incline
 	{font-style:italic;
-	 font-size:12pt;
+	 font-size:11pt;
 	 font-family:Arial,"\6977 \4F53 "}
 .bolder
 	{font-weight:bold}
@@ -98,6 +98,23 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 <a href="https://scholar.google.com/scholar?oi=bibs&cluster=10135161801314640093&btnI=1&hl=en"> [googlebook]</a> 
 <a href="paper/bookchapter2018-fogorch.pdf">[preprint]</a>
  </span></p>
+
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Q.Li, H.Peng, J.Li, C.Xia, R.Yang, L.Sun, P.S.Yu, L.He. A Text Classification Survey: From Shallow to Deep Learning.   CoRR abs/2008.00364, 2020 <a href="https://arxiv.org/abs/2008.00364">[arxiv]</a> 
+</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu, L.He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  CoRR abs/2008.05880, 2020 <a href="https://arxiv.org/abs/2008.05880">[arxiv]</a> 
+</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Horus: An Interference-aware Resource Manager for Deep Learning Systems. International Conference on Algorithms and Architectures for Parallel Processing (ICA3PP), 2020 
+<a href="paper/ica3pp2020.pdf">[paper]</a> 
+</span></p>
+
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; C.Hu, J.Zhu, R.Yang*, H.Peng, T.Wo, S.Xue, X.Yu, J.Xu, R.Ranjan. Toposch: Latency-Aware Scheduling Based on Critical Path Analysis on Shared YARN Clusters. IEEE Conference on Cloud Computing (Cloud), 2020 
+<a href="paper/cloud2020.pdf">[paper]</a> 
+</span></p>
+
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2019</span></p>
