--- a/services.html
+++ b/services.html
@@ -69,7 +69,6 @@
 </head>
 
 
-
 <title> Renyu YANG's Services </title>
 <body>
 <p><span class="Bolder">Services <a href="./index.html">[home]</a></span></p>
@@ -79,17 +78,14 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> PC Member:</strong></span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE ESaaSA 2014 (in conjuction with IEEE CLOSER 2014)</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE ESaaSA 2014 (in conjuction with IEEE CLOSER 2014)</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE IWES 2014 (in conjuction with IEEE CloudCom 2014) </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE FiCloud 2016 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE/ACM BDCAT 2016-2019  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE/ACM UCC 2019 </span></p>
-
-
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE ESaaSA'14 (in conjuction with IEEE CLOSER 2014)</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE IWES'14 (in conjuction with IEEE CloudCom 2014) </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE FiCloud'16 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE/ACM BDCAT'16-'20  </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE/ACM UCC'18-'20 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Conferences Organizer: </strong></span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Organizer: IEEE ISORC'2012, IEEE iVCE'2012, CoLaB Workshop'2012,CoLaB Workshop'2013, CoLaB Workshop'2014</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Organizer: IEEE ISORC'12, IEEE iVCE'12, CoLaB Workshop'12,CoLaB Workshop'13, CoLaB Workshop'14</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; <strong> Reviewer: </strong> </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS,  IEEE ISSRE, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE CCDC, etc. </span></p>
