--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
 
 <span class="STYLE15"> 
-&nbsp;&nbsp;&nbsp; <strong>Renyu(Ryan) Yang, PhD </strong> &nbsp;&nbsp  
+&nbsp;&nbsp;&nbsp; <strong>Renyu Yang, PhD </strong> &nbsp;&nbsp  
 <img src="icons/yin.gif" width="70" height="70" alt="Renyu" border="0" title="Renyu Yang" />  
 </span>
 
@@ -88,7 +88,7 @@
 <div align="left">
 &nbsp;
 </div>
-<p class="style11"><span class="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="images/yangry2017a.jpg" height="350" width="278"></span></p>
+<p class="style11"><span class="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="images/yangry2017a.jpg" height="320" width="258"></span></p>
 </td>
 
 <td width="796" align="right">
@@ -96,7 +96,7 @@
 &nbsp;
 </div>
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp; "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="https://www.edgetic.com">Edgetic</a>, UK </p>
+
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk"> University of Leeds</a>, UK </p>
 
 <!-- p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p -->
@@ -143,17 +143,16 @@
 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I am currently a research scientist at Edgetic Ltd. UK and a research fellow with the school of computing, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. 
-We are presently working on employing intelligent software encompassing distributed scheduling, machine learning, hardware-software modeling, etc.to reshape the future of data center efficiency. 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I am currently a research fellow - funded by UK EPSRC grant - with the school of computing, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China and a visiting scientist at <a href="http://edgetic.com">Edgetic Ltd.</a>, a startup tech company based in UK. We are presently working on employing intelligent software encompassing distributed scheduling, machine learning, hardware-software modeling, etc.to reshape the future of data center efficiency. 
 Previously, I led several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
 2) dependable service provisioning by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
 3) improved system utility for resource management through resource over-subscription mechanism and multi-objective optimization, etc.; 
 and 4) geo-distributed data processing, etc. 
-I has published more than 35 peer-reviewed papers in the field of distributed systems, cloud computing and big data analytics. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
+I has published more than 40 peer-reviewed papers in the field of distributed systems, cloud computing and big data analytics. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China  in June 2011 and January 2017 respectively.  I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively.  I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
 </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests </span></p>
@@ -164,9 +163,9 @@ I has published more than 35 peer-reviewed papers in the field of distributed sy
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Education </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2007.9-2011.6: &nbsp;&nbsp; B.Sc. Computer Science (equivalent to 1st Class Honours), supervised by Dr. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2007.9-2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Dr. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2011.9-2017.1: &nbsp;&nbsp; Ph.D. Computer Science (with Honor), Supervised by Prof. Jie Xu, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2011.9-2017.1: &nbsp;&nbsp; PhD. Computer Science (with Honor), Supervised by Prof. Jie Xu, Beihang University, China &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2012.10-2013.1, 2013.12 and 2016.3: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
@@ -178,7 +177,9 @@ I has published more than 35 peer-reviewed papers in the field of distributed sy
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2016.4-2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2017.3 - 2018.2: &nbsp;&nbsp; Research Scientist and Project Director, Big Data and Brain Computing Research Center (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2017.3 - 2018.3: &nbsp;&nbsp; Research Scientist and Project Director, Big Data and Brain Computing Research Center (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
+ 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2018.3 - 2020.8: &nbsp;&nbsp; Research Scientist, Edgetic Ltd., UK &nbsp;&nbsp;</span></p>
  
 
 
@@ -224,7 +225,12 @@ I have the opportunity to work closely with many institutes around the world and
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> grants -l </strong> </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Server Modelling Capability (No.45904), supported by Innovate UK Programme, UKRI, Key Member, 2020.2 - 2020.9 </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1), funded by UK Engineering and Physical Sciences Research Council (EPSRC), Key Member, 2020.9 - </span></p> 
+
+
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Server Modelling Capability (No.45904), funded by Innovate UK Programme, UKRI, Key Member, 2020.2 - 2020.9 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 Programme), Member, 2018.6 - 2019.12 </span></p>
 
@@ -277,11 +283,11 @@ Dr. Zhenyu Wen (now Postdoc at Newcastle University), Dr. Xue Ouyang (now assist
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html">~$ talks</a> </span></p>
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Services </span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Professional Services </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Some of my recent professional services can be found here: <a href="services.html">~$ services</a> </span></p>
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (中国电子学会科技进步特等奖) </p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
@@ -289,10 +295,8 @@ Dr. Zhenyu Wen (now Postdoc at Newcastle University), Dr. Xue Ouyang (now assist
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>&#8220;Best Paper Award&#8221;</strong> of the IEEE 11th International Symposium on Autonomous Decentralized System(ISADS), 2013 </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;  <strong>&#8220;Excellent Academic Award&#8221;</strong> of The Institute of Advanced Computing Technology, Beihang University
 </span></p> 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>&#8220;Excellent Scientific Practice Award&#8221;</strong> of The Institute of Advanced Computing Technology, Beihang University</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   the 20th <strong>&quot;FengRu Cup&quot;</strong> Innovation Competition of Beihang University, Second Price</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   Excellence Student Scholarship of Beihang University</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   the 18th <strong>&quot;FengRu Cup&quot;</strong> Innovation Competition of Beihang University, Third Price</span></p>
+
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Misc </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
@@ -301,7 +305,7 @@ Dr. Zhenyu Wen (now Postdoc at Newcastle University), Dr. Xue Ouyang (now assist
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Jan. 2020 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Aug. 2020 </span></p>
 
 </body>
 </html>
