--- a/publications_topics.html
+++ b/publications_topics.html
@@ -18,7 +18,7 @@
 	{font-size:24px}
 .incline
 	{font-style:italic;
-	 font-size:12pt;
+	 font-size:11pt;
 	 font-family:Arial,"\6977 \4F53 "}
 .bolder
 	{font-weight:bold}
@@ -85,6 +85,10 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Distributed System Resource Management: Scheduling and Orchestration </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; R.Yang, J.Xu. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
+</span></p>
+
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. Performance-aware Speculative Resource Oversubscription for Large-scale Clusters, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 
 <a href="paper/tpds2020-rose.pdf">[paper]</a> 
@@ -112,11 +116,19 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services, in IEEE Internet Computing (IC), IEEE Computer Society  (SCI-IF = 1.929, Q1)  <a href="paper/ic2017.pdf">[paper]</a>
 </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Horus: An Interference-aware Resource Manager for Deep Learning Systems. International Conference on Algorithms and Architectures for Parallel Processing (ICA3PP), 2020 
+<a href="paper/ica3pp2020.pdf">[paper]</a> 
+</span></p>
+
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; C.Hu, J.Zhu, R.Yang*, H.Peng, T.Wo, S.Xue, X.Yu, J.Xu, R.Ranjan. Toposch: Latency-Aware Scheduling Based on Critical Path Analysis on Shared YARN Clusters. IEEE Conference on Cloud Computing (Cloud), 2020 
+<a href="paper/cloud2020.pdf">[paper]</a> 
+</span></p>
+
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, X.Ouyang, Y.Chen, P.Townend, J.Xu. Intelligent Resource Scheduling: a Machine Learning Perspective. in the 12th IEEE SOSE 2018, <a href="paper/sose2018.pdf">[paper]</a>       
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; R.Yang, J.Xu. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
-</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; R.Yang and J.Xu. Computing at Massive Scale: Scalability and Dependability Challenges, in the 10th IEEE International Symposium on Service Oriented System Engineering (SOSE 2016) <a href="paper/sose2016.pdf">[paper]</a> 
 </span></p>
@@ -129,9 +141,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-location System. in the 13th IEEE SOSE, 2019 
 <a href="paper/sose2019-shaready.pdf">[paper]</a> </span></p>
-
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Townend, S.J.Clement, D.Burdett, R.Yang*, J.Shaw, B.Slater, J.Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 <a href="paper/sose2019-k8s.pdf">[paper]</a> </span></p>
+ 
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> System Dependability: Reliability and Fault Tolerance </span></p>
@@ -164,11 +174,17 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, J.Ouyang, C.Hu. Fail at Scale. Communications of CCF, 2016 (In Chinese) <a href="paper/ccfcomm2016.pdf">[paper]</a>
 </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Townend, S.J.Clement, D.Burdett, R.Yang*, J.Shaw, B.Slater, J.Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 <a href="paper/sose2019-k8s.pdf">[paper]</a> </span></p>
 
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Systems for Big Data and ML Applications </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Q.Li, H.Peng, J.Li, C.Xia, R.Yang, L.Sun, P.S.Yu, L.He. A Text Classification Survey: From Shallow to Deep Learning.   CoRR abs/2008.00364, 2020 <a href="https://arxiv.org/abs/2008.00364">[arxiv]</a> 
+</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu, L.He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  CoRR abs/2008.05880, 2020 <a href="https://arxiv.org/abs/2008.05880">[arxiv]</a> 
+</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR), 2020 
 <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a><a href="paper/csur2020.pdf">[paper]</a> </span></p>
